# LambEngine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: ci.yml  release.yml
docs-site/: docusaurus.config.ts  package-lock.json  sidebars.ts
docs-site/docs/: architecture.md  index.md
docs-site/docs/api/: core.md  input.md  renderer.md  utils.md
docs-site/docs/getting-started/: installation.md  project-structure.md  quick-start.md
docs-site/docs/guides/: configuration.md  ecs.md  input-system.md  rendering.md  shaders.md
docs-site/src/css/: custom.css
shaders/: basic_fragment.glsl
src/: main.cpp
src/Core/: IGame.hpp  MyGame.cpp  MyGame.hpp  engine.cpp  engine.hpp
src/component/: component.hpp  entity.hpp  entity_manager.hpp
src/component/transform/: transform.hpp
src/event/: input.cpp  input.hpp
src/io/config/: config_manager.cpp  config_manager.hpp
src/io/mtl/: mtl_parser.cpp  mtl_parser.hpp
src/renderer/camera/: camera.cpp  camera.hpp
src/renderer/lighting/: material.hpp  materials.hpp
src/renderer/renderable/: model.cpp  model.hpp  primitive.cpp  primitive.hpp  renderable.cpp  renderable.hpp
src/renderer/shader/: shader.cpp  shader.hpp  shader_engine.cpp  shader_engine.hpp
src/renderer/texture/: texture.cpp  texture.hpp
src/utils/: log.hpp  time.hpp
tests/: ActionTest.cpp  CMakeLists.txt  InputHandlerFactoryTest.cpp  InputSystemTest.cpp  MinimalTest.cpp  stb_impl.cpp
